Sample data working

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -8,129 +8,14 @@
 
 <hr>
 
-<div>
-  <div>
-    <h2>
-      Add a new pet
-    </h2>
-
-    <form action="/insert_pet" method="post">
-      <div>
-        <label for="name_box">
-          Name
-        </label>
-
-        <input type="text" id="name_box" name="query_name">
-      </div>
-
-      <div>
-        <label for="estimated_birthday_box">
-          Estimated birthday
-        </label>
-
-        <input type="date" id="estimated_birthday_box" name="query_estimated_birthday">
-      </div>
-
-      <div>
-        <label for="status_box">
-          Status
-        </label>
-
-        <input type="text" id="status_box" name="query_status">
-      </div>
-
-      <div>
-        <label for="adopter_id_box">
-          Adopter
-        </label>
-
-        <input type="text" id="adopter_id_box" name="query_adopter_id">
-      </div>
-
-      <div>
-        <label for="gender_box">
-          Gender
-        </label>
-
-        <input type="text" id="gender_box" name="query_gender">
-      </div>
-
-      <div>
-        <label for="weight_box">
-          Weight
-        </label>
-
-        <input type="text" id="weight_box" name="query_weight">
-      </div>
-
-      <div>
-        <label for="children_competability_ranking_box">
-          Children competability ranking
-        </label>
-
-        <input type="text" id="children_competability_ranking_box" name="query_children_competability_ranking">
-      </div>
-
-      <div>
-        <label for="dog_competability_ranking_box">
-          Dog competability ranking
-        </label>
-
-        <input type="text" id="dog_competability_ranking_box" name="query_dog_competability_ranking">
-      </div>
-
-      <div>
-        <label for="cat_competability_ranking_box">
-          Cat competability ranking
-        </label>
-
-        <input type="text" id="cat_competability_ranking_box" name="query_cat_competability_ranking">
-      </div>
-
-      <div>
-        <label for="home_alone_competability_ranking_box">
-          Home alone competability ranking
-        </label>
-
-        <input type="text" id="home_alone_competability_ranking_box" name="query_home_alone_competability_ranking">
-      </div>
-
-      <div>
-        <label for="activity_competability_ranking_box">
-          Activity competability ranking
-        </label>
-
-        <input type="text" id="activity_competability_ranking_box" name="query_activity_competability_ranking">
-      </div>
-
-      <div>
-        <label for="notes_box">
-          Notes
-        </label>
-
-        <textarea id="notes_box" name="query_notes" rows="3"></textarea>
-      </div>
-
-      <div>
-        <label for="foster_id_box">
-          Foster
-        </label>
-
-        <input type="text" id="foster_id_box" name="query_foster_id">
-      </div>
-
-      <div>
-        <label for="species_box">
-          Species
-        </label>
-
-        <input type="text" id="species_box" name="query_species">
-      </div>
-
-      <button>
-        Create pet
-      </button>
-    </form>
+<div class="card" style="width: 18rem;">
+  <img src="https://www.shelterluv.com/sites/default/files/styles/60x60/public/animal_pics/35708/2021/11/28/06/st_edward1638110625Edward.jpg?itok=XvfRIx63" class="card-img-top" alt="...">
+  <div class="card-header">
+    <h5>Pet Name</h5>
+  </div>
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
 
