starting on user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,11 +53,11 @@
                 Account
               </a>
               <div class="dropdown-menu my-2 my-lg-0" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Sign In</a>
-                <a class="dropdown-item" href="#">Sign Up</a>
+                <a class="dropdown-item" href="/user_sign_in">Sign In</a>
+                <a class="dropdown-item" href="/user_sign_up">Sign Up</a>
                 <a class="dropdown-item" href="#">Preferences</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Sign Out</a>
+                <a class="dropdown-item" href="/user_sign_out">Sign Out</a>
               </div>
             </li>
           </ul>
