--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -2,180 +2,57 @@
     <div>
       <div>
         <h1>
-          List of all pets
+          All Pets
         </h1>
       </div>
     </div>
 
     <hr>
 
-    <div class="card" style="width: 18rem;">
-      <img src="https://www.shelterluv.com/sites/default/files/styles/60x60/public/animal_pics/35708/2021/11/28/06/st_edward1638110625Edward.jpg?itok=XvfRIx63" class="card-img-top" alt="...">
-      <div class="card-header">
-        <h5>Pet Name</h5>
-      </div>
+  <%= search_form_for @q do |f| %>
+  <p>Narrow results:</p>
+
+  <div>
+    <%= f.label :name_cont, "Name containing" %>
+    <%= f.text_field :name_cont, :placeholder => "Enter a few characters" %>
+  </div>
+
+  <div>
+    <%= f.label :species_cont, "Species containing" %>
+    <%= f.text_field :species_cont, :placeholder => "Enter a few characters" %>
+  </div>
+
+  <div>
+    <%= f.label :status_cont, "Status containing" %>
+    <%= f.text_field :status_cont, :placeholder => "Enter a few characters" %>
+  </div>
+
+  <%= f.submit :class => "btn btn-primary btn-block" %>
+  
+  <a href="/pets">Clear filters</a>
+<% end %>
+
+<div class="row row-cols-1 row-cols-md-4">
+  <% @list_of_pets.each do |a_pet| %>
+  <div class="col mb-3">
+    <div class="card h-100">
+      <img src="<%=a_pet.picture%>" class="card-img-top" alt="<%=a_pet.picture%>">
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title"><%=a_pet.name%></h5>
+        <h6 class="card-subtitle mb-2 text-muted"><%=a_pet.species%>, <%="#{time_ago_in_words(a_pet.estimated_birthday)} old"%></h6>
+        <h6 class="card-subtitle mb-2 text-muted"><%=a_pet.gender%>, <%=a_pet.weight%></h6>
+        <%# <p class="card-text">TEXT</p> %>
+        <div>
+          <a href="/pets/<%=a_pet.id%>" class="btn btn-outline-primary btn-sm">Details</a>
+          <a href="/pets/<%=a_pet.id%>" class="btn btn-outline-success btn-sm">Add to Watchlist</a>
+        </div>
+        <span class="badge badge-pill badge-info">Children <span class="badge badge-light"><%=a_pet.children_competability_ranking%></span></span>
+        <span class="badge badge-pill badge-info">Dog <span class="badge badge-light"><%=a_pet.dog_competability_ranking%></span></span>
+        <span class="badge badge-pill badge-info">Cat <span class="badge badge-light"><%=a_pet.cat_competability_ranking%></span></span>
+        <span class="badge badge-pill badge-info">Home Alone <span class="badge badge-light"><%=a_pet.home_alone_competability_ranking%></span></span>
+        <span class="badge badge-pill badge-info">Activity <span class="badge badge-light"><%=a_pet.activity_competability_ranking%></span></span>
       </div>
     </div>
-
-    <hr>
-    <div>
-      <div>
-        <table>
-          <tr>
-            <th>
-              ID
-            </th>
-
-            <th>
-              Name
-            </th>
-
-            <th>
-              Estimated birthday
-            </th>
-
-            <th>
-              Status
-            </th>
-
-            <th>
-              Adopter
-            </th>
-
-            <th>
-              Gender
-            </th>
-
-            <th>
-              Weight
-            </th>
-
-            <th>
-              Children competability ranking
-            </th>
-
-            <th>
-              Dog competability ranking
-            </th>
-
-            <th>
-              Cat competability ranking
-            </th>
-
-            <th>
-              Home alone competability ranking
-            </th>
-
-            <th>
-              Activity competability ranking
-            </th>
-
-            <th>
-              Notes
-            </th>
-
-            <th>
-              Foster
-            </th>
-
-            <th>
-              Species
-            </th>
-
-            <th>
-              Created at
-            </th>
-
-            <th>
-              Updated at
-            </th>
-
-            <th>
-            </th>
-          </tr>
-
-          <% @list_of_pets.each do |a_pet| %>
-          <tr>
-            <td>
-              <%= a_pet.id %>
-            </td>
-
-            <td>
-              <%= a_pet.name %>
-            </td>
-
-            <td>
-              <%= a_pet.estimated_birthday %>
-            </td>
-
-            <td>
-              <%= a_pet.status %>
-            </td>
-
-            <td>
-              <%= a_pet.adopter_id %>
-            </td>
-
-            <td>
-              <%= a_pet.gender %>
-            </td>
-
-            <td>
-              <%= a_pet.weight %>
-            </td>
-
-            <td>
-              <%= a_pet.children_competability_ranking %>
-            </td>
-
-            <td>
-              <%= a_pet.dog_competability_ranking %>
-            </td>
-
-            <td>
-              <%= a_pet.cat_competability_ranking %>
-            </td>
-
-            <td>
-              <%= a_pet.home_alone_competability_ranking %>
-            </td>
-
-            <td>
-              <%= a_pet.activity_competability_ranking %>
-            </td>
-
-            <td>
-              <%= a_pet.notes %>
-            </td>
-
-            <td>
-              <%= a_pet.foster_id %>
-            </td>
-
-            <td>
-              <%= a_pet.species %>
-            </td>
-
-            <td>
-              <%= time_ago_in_words(a_pet.created_at) %> ago
-            </td>
-            <td>
-              <%= time_ago_in_words(a_pet.updated_at) %> ago
-            </td>
-
-            <td>
-              <a href="/pets/<%= a_pet.id %>">
-                Show details
-              </a>
-            </td>
-          </tr>
-          <% end %>
-        </table>
-      </div>
-    </div>
-
-    <hr>
+  </div>
+  <% end %>%
 </div>
