--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
             <a class="nav-link" href="/pets">Matches <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/pets">Watchlist <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/watchlists">Watchlist <span class="sr-only">(current)</span></a>
           </li>
             <li class="nav-item active">
               <a class="nav-link" href="/pets">Applications <span class="sr-only">(current)</span></a>
@@ -53,11 +53,14 @@
                 Account
               </a>
               <div class="dropdown-menu my-2 my-lg-0" aria-labelledby="navbarDropdown">
+              <%if @current_user == nil %>
                 <a class="dropdown-item" href="/user_sign_in">Sign In</a>
                 <a class="dropdown-item" href="/user_sign_up">Sign Up</a>
-                <a class="dropdown-item" href="#">Preferences</a>
+                <%else%>
+                <a class="dropdown-item" href="/edit_user_profile">Preferences</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/user_sign_out">Sign Out</a>
+                <%end%>
               </div>
             </li>
           </ul>
