--- a/app/views/user_authentication/sign_in.html.erb
+++ b/app/views/user_authentication/sign_in.html.erb
@@ -1,23 +1,19 @@
-<h1>Sign in</h1>
+<div class="container">
+  <h1>Sign in</h1>
+  <form action="/user_verify_credentials" method="post">
+    <div class="form-group">
+      <label for="email_box">Email</label>
+      <input type="email" class="form-control" id="email_box" name="query_email" placeholder="Enter your email...">
+    </div>
+    <div class="form-group">
+      <label for="password_box">Password</label>
+      <input type="password" class="form-control" id="password_box" name="query_password" placeholder="Enter your password...">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  <hr>
 
-<form action="/user_verify_credentials" method="post">
-  <div>
-    <label for="email_box">Email</label>
-    <input id="email_box" name="query_email" placeholder="Enter your email..." type="text">
-  </div>
-
-  <div>
-    <label for="password_box">Password</label>
-    <input id="password_box" name="query_password" placeholder="Enter your password..." type="password">
-  </div>
-
-  <button>
-    Sign in
-  </button>
-</form>
-
-<hr>
-
-<p>
-  Or, <a href="/user_sign_up">Sign up</a> instead.
-</p>
+  <p>
+    Or, <a href="/user_sign_up">Sign up</a> instead.
+  </p>
+</div>
