--- a/app/views/user_authentication/sign_up.html.erb
+++ b/app/views/user_authentication/sign_up.html.erb
@@ -1,53 +1,45 @@
+<div class="container">
 <h1>Sign up</h1>
 
 <form action="/insert_user" method="post">
+    <div class="form-row">
+      <div class= "form-group col-md-12">
+      <label for="email_box">Email</label>
+      <input type="email" class="form-control" id="email_box" name="query_email" placeholder="Enter your email...">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="password_box">Password</label>
+        <input type="password" class="form-control" id="password_box" name="query_password" placeholder="Enter your password...">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="password_confirmation_box">Password Confirmation</label>
+        <input type="password" class="form-control" id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password...">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="first_name_box">First name</label>
+        <input type="text" class="form-control" id="first_name_box" name="query_first_name">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="last_name_box">Last name</label>
+        <input type="text" class="form-control" id="last_name_box" name="query_last_name">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class= "form-group col-md-12">
+      <label for="phone_number_box">Phone number</label>
+      <input type="text" class="form-control" id="phone_number_box" name="query_phone_number" placeholder="Enter your phone number...">
+      </div>
+    </div>
 
-  <div>
-    <label for="email_box">Email</label>
-    <input id="email_box" name="query_email" placeholder="Choose a email..." type="text">
-  </div>
-                 
-  <div>
-    <label for="first_name_box">First name</label>
-      
-    <input type="text" id="first_name_box" name="query_first_name">
-  </div>
-         
-  <div>
-    <label for="last_name_box">Last name</label>
-      
-    <input type="text" id="last_name_box" name="query_last_name">
-  </div>
-         
-  <div>
-    <label for="phone_number_box">Phone number</label>
-      
-    <input type="text" id="phone_number_box" name="query_phone_number">
-  </div>
-         
-  <div>
-    <label for="account_type_box">Account type</label>
-      
-    <input type="text" id="account_type_box" name="query_account_type">
-  </div>
-    
-  <div>
-    <label for="password_box">Password</label>
-    <input id="password_box" name="query_password" placeholder="Choose a password..." type="password">
-  </div>
-
-  <div>
-    <label for="password_confirmation_box">Password Confirmation</label>
-    <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
-  </div>
-
-  <button>
-    Sign up
-  </button>
-</form>
-
-<hr>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  <hr>
 
 <p>
   Or, <a href="/user_sign_in">Sign in</a> instead.
 </p>
+</div>
