--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -1,8 +1,8 @@
 <div>
   <div>
-    <h1>
-      Update your preferences
-    </h1>
+    <h3>
+      Update my preferences
+    </h3>
   </div>
 </div>
 
