--- a/app/views/user_authentication/edit_profile.html.erb
+++ b/app/views/user_authentication/edit_profile.html.erb
@@ -1,44 +1,42 @@
 <div >
-  <h5>
+  <h3>
     Edit User Account
-  </h5>
+  </h3>
 
-  <div>
-    <form action="/modify_user" method="post">
-      <div>
-        <label for="email_box">Email</label>
-        <input id="email_box" name="query_email" value="<%= @current_user.email %>">
+  <form action="/modify_user" method="post">
+    <div class="form-row">
+      <div class= "form-group col-md-12">
+      <label for="email_box">Email</label>
+      <input type="email" class="form-control" id="email_box" name="query_email" value="<%= @current_user.email %>">
       </div>
-      <div>
-        <label for="first_name_box">First name</label>
-        <input id="first_name_box" name="query_first_name" value="<%= @current_user.first_name %>">
-      </div>
-      <div>
-        <label for="last_name_box">Last name</label>
-        <input id="last_name_box" name="query_last_name" value="<%= @current_user.last_name %>">
-      </div>
-      <div>
-        <label for="phone_number_box">Phone number</label>
-        <input id="phone_number_box" name="query_phone_number" value="<%= @current_user.phone_number %>">
-      </div>
-      <div>
-        <label for="account_type_box">Account type</label>
-        <input id="account_type_box" name="query_account_type" value="<%= @current_user.account_type %>">
-      </div>
-
-      <div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
         <label for="password_box">Password</label>
-        <input id="password_box" name="query_password" placeholder="Choose a password..." type="password">
+        <input type="password" class="form-control" id="password_box" name="query_password" placeholder="Enter your password...">
       </div>
-    
-      <div>
+      <div class="form-group col-md-6">
         <label for="password_confirmation_box">Password Confirmation</label>
-        <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
+        <input type="password" class="form-control" id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password...">
       </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="first_name_box">First name</label>
+        <input type="text" class="form-control" id="first_name_box" name="query_first_name" value="<%= @current_user.first_name %>">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="last_name_box">Last name</label>
+        <input type="text" class="form-control" id="last_name_box" name="query_last_name" value="<%= @current_user.last_name %>">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class= "form-group col-md-12">
+      <label for="phone_number_box">Phone number</label>
+      <input type="text" class="form-control" id="phone_number_box" name="query_phone_number" value="<%= @current_user.phone_number %>">
+      </div>
+    </div>
 
-      <button>
-        Update account
-      </button>
-    </form>
-  </div>
-</div>
+    <button type="submit" class="btn btn-primary btn-block">Update Profile</button>
+  </form>
+  <hr>
